fix broken layout on profile; fix list logic for albums on music page

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,3 +1,19 @@
+.profile-album {
+  width: 350px;
+  height: 325px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #222222;
+  border-style: solid;
+  border-width: 5px 5px 5px 20px;
+  border-radius: 5px;
+  border-color: #eeeeee;
+  display: block;
+}
+
 .profile-col {
   width: 350px;
   margin-bottom: 10px;
